# rank-rank

./: .cursorrules  .gitattributes  .gitignore  ALL_COMPLETE.md  COMPLETE_STATUS.md  CRATE_ORGANIZATION_ANALYSIS.md  CURSOR_CONFIG.md  Cargo.toml  FINAL_ORGANIZATION_ANALYSIS.md  FINAL_STATUS.md  FINAL_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  LTR_ANALYSIS.md  MONOREPO_FINAL_STATUS.md  MONOREPO_SETUP_COMPLETE.md  MONOREPO_VS_SEPARATE_ANALYSIS.md  NAME_DECISION_WITH_PUBLISHED_CONSTRAINT.md  ORGANIZATION_RECOMMENDATIONS.md  PLAN.md  RANK_COLLECTION_ORGANIZATION_RESEARCH.md  README.md  README_TYPST.md  REFINEMENT_COMPLETE.md  RENAME_COMPLETE.md  RENAME_PLAN.md  RENAME_PROGRESS.md  RENAME_SUMMARY.md  REPOSITORY_STRUCTURE_OPTIONS.md  REVIEW_ANALYSIS.md  RUST_ECOSYSTEM_ORGANIZATION_RESEARCH.md  SECURITY_AUDIT.md  SETUP.md  SETUP_COMPLETE.md  STRUCTURE_SUMMARY.md  TEST_RESULTS.md  TIDY_COMPLETE.md  USAGE.md  rank-rank.code-workspace  rustdoc-header.html  rustdoc-math-README.md
archive/2025-01/crates/rank-learn/: Cargo.toml  README.md
benchmarks/comparisons/: Cargo.toml
benchmarks/comparisons/benches/: bm25_comparison.rs  dense_comparison.rs
crates/rank-learn/: Cargo.toml  README.md
crates/rank-learn/benches/: lambdarank.rs
crates/rank-learn/docs/: README.md
crates/rank-learn/examples/: basic_usage.rs  lambdarank_training.rs  neural_ltr_training.rs
crates/rank-learn/hack/viz/: README.md  generate_ltr_real_data.py
crates/rank-learn/rank-learn/: Cargo.toml
crates/rank-learn/rank-learn-python/: Cargo.toml  pyproject.toml
crates/rank-learn/rank-learn-python/src/: lib.rs
crates/rank-learn/rank-learn/examples/: lambdarank_training.rs
crates/rank-learn/rank-learn/src/: error.rs  lambdarank.rs  lib.rs  neural.rs
crates/rank-learn/rank-learn/tests/: edge_cases.rs  integration.rs  property_tests.rs
crates/rank-learn/src/: error.rs  lambdarank.rs  lib.rs  neural.rs  ranking_svm.rs
crates/rank-learn/tests/: comprehensive_integration.rs  edge_cases.rs  error_handling_tests.rs  integration.rs  integration_tests.rs  performance_tests.rs  property_tests.rs  property_tests_python.rs
crates/rank-rank/: Cargo.toml
crates/rank-rank/src/: lib.rs
crates/rank-rank/src/pipeline/: mod.rs
crates/rank-retrieve/: Cargo.toml  README.md  test_size  test_visualization.py
crates/rank-retrieve/benches/: ann_benchmarks.rs  ann_benchmarks_standard.rs  bm25.rs  dense.rs  early_termination.rs  factory_performance.rs  generative.rs  id_compression.rs  routing.rs  sort_performance.rs  sparse.rs
crates/rank-retrieve/docs/: ADDITIONAL_OPTIMIZATIONS.md  ADVANCED_OPTIMIZATIONS.md  ANN_ALGORITHMS_PLAN.md  ANN_BENCHMARK_IMPLEMENTATION.md  ANN_BENCHMARK_STANDARDS.md  ANN_METHODS_SUMMARY.md  BENCHMARK_OPTIMIZATION.md  BM25_OPTIMIZATION.md  CRITICAL_PERSPECTIVES_AND_LIMITATIONS.md  CRITIQUE_REFINED.md  DESIGN_CRITIQUE.md  ECOSYSTEM_OPTIMIZATIONS_SUMMARY.md  EVOC_IMPLEMENTATION.md  FACETS_VS_FILTERS_VALIDATION.md  FACTORY_AUTOTUNE_GUIDE.md  FAISS_COMPARISON.md  FST_OPTIMIZATION.md  GETTING_STARTED.md  HNSW_IMPLEMENTATION_PLAN.md  ID_COMPRESSION_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_REFINEMENTS_2025.md  INCREMENTAL_SEARCH_GUIDE.md  INTEGRATION_DEEP_DIVE.md  LATE_INTERACTION_GUIDE.md  MEMORY_OPTIMIZATION.md  MOTIVATION.md  NEW_FEATURES_2025.md  NEXT_STEPS_SUMMARY.md  PERSISTENCE_DESIGN.md  PERSISTENCE_DESIGN_DENSE.md  PLAID_ANALYSIS.md  PROFILING_AND_REVIEW.md  PROFILING_SUMMARY.md  RAG_GUIDE.md  README.md  REFINEMENTS.md  REFINEMENT_TECHNIQUES.md  RESEARCH_FINDINGS.md  RESEARCH_SUMMARY.md  (+13 more)
crates/rank-retrieve/docs/archive/: ALGORITHM_NAMING_SUMMARY.md  ANN_ALGORITHM_NAMES_AND_RELATIONSHIPS.md  BM25_VARIANTS_RESEARCH.md  CLASSIC_ANN_METHODS.md  COMPETITIVE_ANALYSIS.md  DEPENDENCY_RESEARCH.md  EVOC_AND_ANN_RELATIONSHIP.md  FACETS_VS_FILTERS.md  FAISS_INTEGRATION_SUMMARY.md  FAISS_LEARNINGS_VALIDATION.md  FILTERING_IN_VECTOR_SEARCH.md  (+36 more)
crates/rank-retrieve/examples/: ann_algorithms.rs  basic_retrieval.rs  benchmark_all_algorithms.rs  bm25_variants.rs  colpali_multimodal_pipeline.rs  error_handling.rs  factory_and_autotune.rs  filtering_and_faceting.rs  full_pipeline.rs  generative_retrieval.rs  hnsw_seed_selection.rs  hybrid_retrieval.rs  kmeans_tree_example.rs  late_interaction_pipeline.rs  qdrant_integration.rs  qdrant_real_integration.rs  quantization_methods.rs  query_expansion.rs  query_likelihood.rs  realistic_evaluation.rs  realistic_retrieval.rs  semantic_caching.rs  tfidf_retrieval.rs  usearch_integration.rs  vamana_basic.rs
crates/rank-retrieve/rank-retrieve/: Cargo.toml
crates/rank-retrieve/rank-retrieve-python/: Cargo.toml  README.md  pyproject.toml
crates/rank-retrieve/scripts/: generate_benchmark_report.sh  profile.sh  run_ann_benchmarks.sh
crates/rank-retrieve/src/: batch.rs  bm25.rs  dense.rs  error.rs  filtering.rs  lib.rs  query_expansion.rs  query_likelihood.rs  retriever.rs  routing.rs  simd.rs  tfidf.rs
crates/rank-retrieve/tests/: CROSS_CRATE_TEST_HELPERS.md  SHARED_TEST_UTILITIES.md  TEST_HELPERS.md  ann_comprehensive.rs  ann_integration.rs  autotune_edge_cases.rs  autotune_property_tests.rs  backend_trait_tests.rs  benchmark_tests.rs  comprehensive_tests.rs  compression_correctness.rs  compression_edge_cases.rs  compression_fuzz.proptest-regressions  compression_fuzz.rs  compression_integration.rs  compression_performance.rs  compression_property.rs  compression_threshold.rs  consistency_tests.rs  cross_method_consistency_tests.rs  doc_examples_tests.rs  e2e_full_pipeline.rs  e2e_fusion_eval.rs  e2e_production_patterns.rs  e2e_realistic_scenarios.rs  eager_bm25_property_tests.rs  eager_bm25_tests.rs  edge_case_tests.rs  edge_cases.rs  error_handling_tests.rs  evoc_tests.rs  example_enhanced_helpers.rs  example_with_helpers.rs  executable_docs_tests.rs  factory_and_autotune_integration.rs  factory_edge_cases.rs  factory_property_tests.rs  heap_property_tests.proptest-regressions  heap_property_tests.rs  hnsw_compression.rs  (+36 more)
crates/rank-sparse/rank-sparse/: Cargo.toml
crates/rank-sparse/rank-sparse-python/: Cargo.toml  pyproject.toml
(+459 files in other folders)
