[workspace]
# Note: Each crate has its own workspace, so we don't include them here
# This is just for shared dependencies. Individual crates manage their own workspaces.
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]

[workspace.dependencies]
# Shared dependencies across all crates
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py37"] }
criterion = "0.5"
proptest = "1"
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# rank-rerank specific
kodama = "0.3"

# Cross-crate dependencies (path-based for development)
rank-soft = { path = "crates/rank-soft", package = "rank-soft" }

