[workspace]
members = ["rank-learn", "rank-learn-python"]
resolver = "2"
default-members = ["rank-learn"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]

[workspace.dependencies]
rank-soft = { path = "../rank-soft", package = "rank-soft" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py37"] }
criterion = "0.5"
proptest = "1"

