[package]
name = "rank-rank"
version = "0.1.0"
edition = "2021"
description = "Unified facade for the rank-* information retrieval ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/rank-rank"

[dependencies]
rank-retrieve = { path = "../rank-retrieve", version = "0.1.0" }
rank-fusion = { path = "../rank-fusion", version = "0.1.20" }
rank-rerank = { path = "../rank-rerank", version = "0.7.36" }
rank-eval = { path = "../rank-eval", version = "0.1.0" }

# CLI dependencies
clap = { version = "4.4", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:anyhow", "dep:serde", "dep:serde_json"]

[[bin]]
name = "rank-rank"
required-features = ["cli"]
