[package]
name = "rank-learn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Learning to Rank frameworks: LambdaRank, LambdaMART, XGBoost integration"
repository = "https://github.com/arclabs561/rank-learn"
documentation = "https://docs.rs/rank-learn"
keywords = ["learning-to-rank", "ltr", "lambdarank", "xgboost", "ranking", "machine-learning"]
categories = ["algorithms", "machine-learning", "science"]

[lib]
name = "rank_learn"
path = "src/lib.rs"

[dependencies]
# Differentiable operations for neural LTR
rank-soft = { workspace = true }

# Optional: XGBoost integration
# xgboost = { version = "2.0", optional = true }

# Optional: LightGBM integration
# lightgbm = { version = "0.5", optional = true }

[features]
default = []
# xgboost = ["dep:xgboost"]
# lightgbm = ["dep:lightgbm"]

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[example]]
name = "lambdarank_training"
path = "examples/lambdarank_training.rs"

[[example]]
name = "neural_ltr_training"
path = "examples/neural_ltr_training.rs"

# [[bench]]
# name = "lambdarank"
# path = "benches/lambdarank.rs"
# harness = false

