[package]
name = "rank-retrieve-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "rank_retrieve"
crate-type = ["cdylib"]

[dependencies]
rank-retrieve = { path = "../rank-retrieve" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py37"] }

