[package]
name = "rank-sparse-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for rank-sparse"
license = "MIT OR Apache-2.0"

[lib]
name = "rank_sparse"
crate-type = ["cdylib"]

[dependencies]
rank-sparse = { path = "../rank-sparse" }
pyo3 = { version = "0.21", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.21"
