[package]
name = "rank-sparse"
version = "0.1.0"
edition = "2021"
description = "Sparse vector operations for ranking (SPLADE, BM25)"
license = "MIT OR Apache-2.0"

[dependencies]
# Num-traits for numeric operations if needed
num-traits = "0.2"
# Serde for serialization
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
