# Workspace moved to root - this crate is now a member of the root workspace

[package]
name = "rank-learn"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Learning to Rank: LambdaRank, LambdaMART, Ranking SVM. For training ranking models."
homepage = "https://github.com/arclabs561/rank-rank"
repository = "https://github.com/arclabs561/rank-rank/tree/main/crates/rank-learn"
documentation = "https://docs.rs/rank-learn"
keywords = [
    "learning-to-rank",
    "ltr",
    "lambdarank",
    "ranking",
    "machine-learning",
]
categories = ["algorithms", "machine-learning", "science"]

[lib]
name = "rank_learn"
path = "src/lib.rs"

[dependencies]
# Differentiable operations for neural LTR
rank-soft = { path = "../rank-soft", version = "0.1", package = "rank-soft" }

# Optional: XGBoost integration
# xgboost = { version = "2.0", optional = true }

# Optional: LightGBM integration
# lightgbm = { version = "0.5", optional = true }

[features]
default = []
# xgboost = ["dep:xgboost"]
# lightgbm = ["dep:lightgbm"]

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[[example]]
name = "lambdarank_training"
path = "examples/lambdarank_training.rs"

[[example]]
name = "neural_ltr_training"
path = "examples/neural_ltr_training.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[bench]]
name = "lambdarank"
path = "benches/lambdarank.rs"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../../rustdoc-header.html"]

